
2010-01-20  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* vim.py debugger.py: Allow commands in the initial buffer and on
	buffers loaded from the command line.
	* vim.py: Improve the error message when catching the exception if
	Vim cannot be spawned.
	* version-hook.py: do not run the version hook when mq patches have
	been applied.
	* debugger.py: Extend the set of available key modifiers in key
	mappings (Sergey Khorev).

===============================================================================
2009-12-31  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* vim.py gdb.py buffer.py: support vim running in a terminal.
	* debugger.py: set the 'noswapfile' option on the console vim buffer
	and the watched variables buffer.

===============================================================================
2009-12-19  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* posix.py: Fix regression test suite hangs on futex.
	* gdb.py gdbmi.py: Fix gdb 7.0 causes exception on break.
	* gdbmi.py misc.py: Fix watched array elements are displayed in
	lexicographical order instead of numeric order.
	* gdb.py: Fix crash when running without a console.
	* vim.py netbeans.py debugger.py: Split the current Vim window and
	display the variables window after running the ``Cdbgvar`` command.
	* setup.py: Fix a 'debugger' name conflict in the installation over a
	previous version 0.7.
	* netbeans.py debugger.py gdb.py: Minimize Vim screen redraws when
	updating the debugger console window.
	* gdb.py: On quitting, do not query some gdb info when no project
	file is defined.
	* asyncproc.py evtloop.py: Do use threading.Event, the low performance
	is actually caused by thread starvation: insert a sleep(). No change
	on Windows performance.
	* asyncproc.py evtloop.py: Do not use threading.Event and improve
	select emulation performance on linux.
	* netbeans.py: Fix netbeans.remove_bug is a string, not a boolean.